<resources>
    <string name="app_name">이건 어때?</string>
    <string name="randombox">오늘 뭐 먹지?</string>
    <string name="vegen">비건</string>
    <string name="europ">양식</string>
    <string name="koreanfood">한식</string>
    <string name="rice">밥</string>
    <string name="noodle">면</string>
    <string name="desert">디저트</string>
    <string name="meal">배달음식</string>
    <string name="randm">랜덤음식</string>
    <string name="ggok">탕.찌개</string>
    <string name="reserch">더 다양한 메뉴</string>
    <string name="dieat">다이어트음식</string>
    <string name="chima">중식</string>
    <string name="jappam">일식</string>
    <string name="asian">아시아음식</string>
    <string name="chikenbrand">랜덤 치킨</string>
    <string name="pizzarandem">랜덤 피자</string>

    //한식
    <string name="bulegogi">불고기</string>
    <string name="bibmbod">비빔밥</string>
    <string name="gimbb">김밥</string>
    <string name="bakbam">백반</string>
    <string name="gondrebob">곤드레밥</string>
    <string name="kimchbooggenbob">김치볶음밥</string>
    <string name="jeukboomnob">제육볶음</string>
    <string name="ossingabookum">오징어볶음</string>
    <string name="jjajangboob">짜장밥</string>
    <string name="jjambbongboon">짬뽕밥</string>
    <string name="karerice">카레라이스</string>
    <string name="omerece">오므라이스</string>
    <string name="chickenmanu">치킨마요덮밥</string>
    <string name="spam">스팸마요덮밥</string>
    <string name="kamchimanu">참치마요덮밥</string>
    <string name="dackjook">닭죽</string>
    <string name="junbookhk">전복죽</string>
    <string name="patjook">팥죽</string>
    <string name="hoobakjook">호박죽</string>
    <string name="dackgooksu">닭국수</string>
    <string name="gogigoksi">고기국수</string>
    <string name="bibmgoksy">비빔국수</string>
    <string name="eulmogooksy">열무국수</string>
    <string name="makgooksy">막국수</string>
    <string name="jamchigooksy">잔치국수</string>
    <string name="nackmun">냉면</string>
    <string name="golbang">골뱅이소면</string>
    <string name="melmen">밀면</string>
    <string name="backsulgi">백설기</string>
    <string name="injelme">인절미</string>
    <string name="dotoremok">도토리묵</string>
    <string name="mokbob">묵밥</string>
    <string name="gamga">감자</string>
    <string name="goguma">고구마</string>
    <string name="oksusu">옥수수</string>
    <string name="ddukgalbe">떡갈비</string>
    <string name="sutbulgalbe">숯불갈비</string>
    <string name="galbejjim">갈비찜</string>
    <string name="gobchang">곱창</string>
    <string name="mackchang">막창</string>
    <string name="juckhae">육회</string>
    <string name="sumde">순대</string>
    <string name="jockbal">족발</string>
    <string name="suueck">수육</string>
    <string name="dackgalbe">닭갈비</string>
    <string name="dackdoretandf">닭도리탕</string>
    <string name="dackbal">닭발</string>
    <string name="chicken">치킨</string>
    <string name="samgetang">삼계탕</string>
    <string name="godema">고등어구이</string>
    <string name="jogaguei">조개구이</string>
    <string name="galachijolen">갈치조림</string>
    <string name="nackjibiknu">낚지볶음</string>
    <string name="gulbe">굴비</string>
    <string name="mulhek">물회</string>
    <string name="hea">회</string>
    <string name="hamuljjim">해물찜</string>
    <string name="janaagugi">장어구이</string>
    <string name="ssamboob">쌈밥</string>
    <string name="gimchihyn">김치전</string>
    <string name="konggooksy">콩국수</string>
    <string name="syndagok">순댓국</string>
    <string name="cnondnamel">콩나물국밥</string>
    <string name="mandugoojk">만둣국</string>
    <string name="hejanggook">해장국</string>
    <string name="galbetang">갈비탕</string>
    <string name="gamjatang">감자탕</string>
    <string name="gomtang">곰탕</string>
    <string name="sullungtnag">설렁탕</string>
    <string name="tuwotang">추어탕</string>
    <string name="sogogijungol">소고기전골</string>
    <string name="kimchijjiga">김치찌개</string>
    <string name="dangjangjhiga">된장찌개</string>
    <string name="budajjiga">부대찌개</string>
    <string name="ddakbookgi">떢볶이</string>
    <string name="remen">라면</string>
    <string name="jjlman">쫄면</string>
    <string name="mando">만두</string>
    <string name="dubojirem">두부조림</string>
    <string name="geranmeldi">계란말이</string>
    <string name="jangjorem">장조림</string>
    <string name="jabcke">잡채</string>
    <string name="samgubsal">삼겹살</string>
    <string name="cjengokgang">청국장</string>
    <string name="dubokimch">두부김치</string>
    <string name="pajun">파전</string>
    <string name="mieokguk">미역국</string>
    <string name="kimch">김치</string>
    <string name="gangemgeranbob">간장계란밥</string>
    <string name="aleboob">알밥</string>
    <string name="noggok">무국</string>
    <string name="lagalbe">LA갈비</string>
    <string name="oribulgogi">오리불고기</string>
    <string name="gegajng">계장</string>
    <string name="ggomak">꼬막무침</string>
    <string name="sujebi">수제비</string>
    <string name="shabeshabe">샤브샤브</string>

    //중식
    <string name="jjajangmen">짜장면</string>
    <string name="jjambbob">짬뽕</string>
    <string name="tangsuuk">탕수육</string>
    <string name="meratnag">마라탕</string>
    <string name="ggubarow">꿔바로우</string>
    <string name="mapadubo">마파두부</string>
    <string name="gerantomatobooknymboob">계란토마토볶음밥</string>
    <string name="eangjangpe">양장피</string>
    <string name="gganpuungi">깐풍기</string>
    <string name="ggangpubgsewe">깐쇼새우</string>
    <string name="creamsewe">크림새우</string>
    <string name="urnfi">유린기</string>
    <string name="pelboche">팔보채</string>
    <string name="gochjapcje">고추잡채</string>
    <string name="cjengun">춘권</string>
    <string name="deamsumn">딤섬</string>
    <string name="chinamweding">우동</string>
    <string name="welmen">울면</string>
    <string name="rezogi">라조기</string>
    <string name="nazawonsse">난자완스</string>
    <string name="uesansel">유산슬</string>
    <string name="jengabook">전가복</string>
    <string name="jjajangbooknumboob">짜장볶음밥</string>
    <string name="gisenem">기스면</string>
    <string name="jjabcjeboob">잡채밥</string>
    <string name="gunmendu">군만두</string>
    <string name="dongpa">동파육</string>

    //일식
    <string name="choboob">초밥</string>
    <string name="remean">라멘</string>
    <string name="nagaseki">나가사키짬뽕</string>
    <string name="onigire">오니기리</string>
    <string name="eana">연어덮밥</string>
    <string name="memelsoba">메밀소바</string>
    <string name="donkachi">돈카츠</string>
    <string name="eakiniku">야키니쿠</string>
    <string name="nato">낫또</string>
    <string name="bookmeudong">볶음우동</string>
    <string name="gacjidong">가츠동</string>
    <string name="gudong">규동</string>
    <string name="tacoeagi">타코야끼</string>
    <string name="dempula">덴푸라</string>
    <string name="okonomieki">오코노미야키</string>
    <string name="eakiatori">야키토리</string>
    <string name="jangadobpan">장어덮밥</string>
    <string name="eakosoba">야끼소바</string>
    <string name="odeng">오뎅</string>
    <string name="nabe">나베</string>
    <string name="sekieaki">스키야키</string>
    <string name="sesime">사시미</string>
    <string name="gareage">가라아게</string>
    <string name="umenosi">우메보시</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>